# seoulos

./: Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  task.rs  vga.rs
src/interrupts/: mod.rs  pic.rs
src/memory/: frame_allocator.rs
src/serial/: mod.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
src/vga/: colours.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
