[package]
name = "sos-core"
version = "0.1.0"
authors = ["jspc <james@zero-internet.org.uk>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
