[package]
name = "sos-core"
version = "0.1.0"
authors = ["jspc <james@zero-internet.org.uk>"]
edition = "2018"

[features]
default = ["pic"]
# Use legacy 8259 pic for hardware interrupts
pic = []
apic = []

#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.8.0"
pc-keyboard = "0.5.0"
pic8259_simple = "0.2.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14"

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
